# cpuminer

./: .gitignore  Makefile.am  configure.ac  cpu-miner.c  example-cfg.json  miner.h  scrypt.c  sha2.c
src/: Makefile.am  cpu-miner.c  main.c  miner.h  sha2.c  util.c
test/: Makefile.am  test_sha.c
